feat: 采购单视图化重构——日应采汇总 + 分批成本录入（D-056~D-063）
采购单与送货单同构改为「订单视图 + 分批录入」：
- 应采清单 = 当日订单明细(status>=1)按「sku+品名+规格+单位」聚合的实时视图，不落库；
- purchase_item 行 = 一次实际进货批次（数量/进货价/批次供应商/录入人），同 SKU 可多行，
  成本按批次加权平均（Σ小计/Σ数量）；单头供应商降级为录入默认值；
- 批次商品必须命中当日应采清单（四元组强校验 + 快照回填），自由手工建单退役；
- 采购页重构为「日应采汇总录入页」：统计条（应采/已采/待采/采购总额/超采）+ 批次展开
  + 单行/批量录入 + 确认/入库；列表页加「已采/应采」「批次数」列；
- 状态语义：0 草稿(录入中) → 1 已确认(成本待确认) → 2 已入库(成本已确认) → 3 已作废；
  空单（无批次）不可确认；超采允许，不影响下单与验收；
- 撤回级联改按 order_date 反查当日非作废采购单，批次维度按 id 倒序扣减、超扣钳零、
  空单作废；退役 source_type/source_order_ids；
- 23:00 采购生成定时任务与「生成采购单」三步抽屉下线；
- 并发防重：purchase_order.active_date 生成列（作废单为 NULL）+ uk_purchase_order_active_date
  唯一索引，getOrCreateDayPurchase 捕获 DuplicateKeyException 后回查先建者（无事务）；
- SQL: sql/s30_purchase_batch_entry.sql（A 段幂等 DDL + B 段清空历史数据，注释保护）+ init_all [45]；
- 测试 295/295 全绿，mvn install 0 error，vite build:prod 0 error。